# web_back

./: .gitignore  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/core/: auth.py
app/routers/: ai.py  chat_ws.py  chats.py  messages.py  users.py
app/utils/: access_token.py
routes/: ai.py  auth.py  messages.py
